updated faculty form

--- a/fm/index.html
+++ b/fm/index.html
@@ -14,6 +14,7 @@
     <div class="container">
         <h3>MITE-Faculty Information</h3>
         <button id="idViewall" class="btn btn-primary">View All</button>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Add faculty</button>
         <div class="row">
             <div class="col-sm-6 offset-3">
                 <input type="text" name="search" id="search" class="form-control">
@@ -23,7 +24,43 @@
         <div id="idTable"></div>
     </div>
 
-    
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="name" placeholder="Enter your name">
+        </div>
+        <div class="form-group">
+        <label for="qualification">Qualification</label>
+        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="qualification" placeholder="Enter quali">
+        </div>
+        <div class="form-group">
+        <label for="name">Dept</label>  
+        <select id="deptId" class="form-control">
+            <option value="">Select Department</option>
+            <option value="CS">CSE</option>
+            <option value="IS">ISE</option>
+            <option value="EC">ECE</option>
+        </select>
+        </div> 
+    </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
